--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Flora">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.activity.AddFloraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
