--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Flora">
         <activity
+            android:name=".view.activity.AddImagenActivity"
+            android:exported="true" />
+        <activity
             android:name=".view.activity.AddFloraActivity"
             android:exported="false" />
         <activity
